# AlphaAmazons

./: .gitignore  Action.h  AlphaAmazons.cpp  AmazonsGame.cpp  AmazonsGame.pro  CMakeLists.txt  MCTree.cpp  botzone.cpp  main.cpp  merge.py  merged.cpp
bot/: BitBoard.cpp  BitBoard.h  Bot.cpp  Bot.h  EvalField.cpp  EvalField.h  MCTree.cpp  MCTree.h  OpeningBook.cpp  OpeningBook.h
botzone/: Action.h  Bot.cpp  Bot.h  ChessBoard.cpp  ChessBoard.h  EvalField.h  Logger.cpp  MCTree.cpp  MCTree.h  OpeningBook.h  Player.h  main.cpp
common/: ChessBoard.cpp  ChessBoard.h  Logger.h  Player.h
control/: Game.cpp  Game.h  Judge.cpp  Judge.h  Judger.cpp  Judger.h  Player.h
cpp/: Action.cpp  ChessBoard.cpp  ChessBoard.h  EvalField.cpp  EvalField.h  MCTree.h  main.cpp
data/: board.data  openingBook0.5_10000*24132.data  openingBook0.5_20000*14243.data  openingBook0.5_30000*10293.data  openingBook0.5_40000*8099.data  openingBook0.5_50000*6804.data  openingBook0.5_8000*28721.data  openingBook5_10000*4019.data  openingBook5_5000*7930.data
opening/: GTree.cpp  GTree.h  generator.cpp
ui/: GameWindow.cpp  GameWindow.h  GameWindow.ui  Menu.cpp  Menu.h  Menu.ui  ui_GameWindow.h  ui_Menu.h
